# OpsFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml  publish-to-pypi.yml  tests.yml
examples/: demo_workflow_auto_registration.py  demo_workflow_preconfigured.py  demo_workflow_yaml.py  example_config.yaml
examples/components/: example_notifier.py  example_package_manager.py  example_plugin.py  example_system_manager.py
examples/components/auto_registered_notifiers/: example_notifier_auto.py
examples/components/auto_registered_plugins/: example_plugin_auto.py
scripts/: create_example_configs.py
src/opsflow/core/config/: __init__.py  loader.py  schema.py
src/opsflow/core/factory/: base.py
src/opsflow/core/models/: __init__.py  context.py  result.py
src/opsflow/core/notifier/: __init__.py  base.py  composite.py  factory.py  registry.py
src/opsflow/core/plugin/: __init__.py  base.py  factory.py  registry.py
src/opsflow/core/registry/: base.py  entry.py
src/opsflow/core/system/: __init__.py  base.py  package_manager.py  system_manager.py
src/opsflow/core/utils/: command_runner.py  logger_setup.py  module_loader.py  report_formatter.py
src/opsflow/core/workflow/: workflow.py
src/opsflow/notifiers/email/: README.md  __init__.py  config.py  email.py  email_config.py  notifier.py
src/opsflow/plugins/gitlab/: README.md  __init__.py  gitlab.py  gitlab_backup_service.py  gitlab_config.py  utils.py
src/opsflow/plugins/rclone/: README.md  __init__.py  config.py  rclone.py  rclone_config.py
src/opsflow/systems/apt/: apt_manager.py
src/opsflow/systems/debian/: __init__.py  debian_manager.py
src/opsflow/systems/ubuntu/: __init__.py  ubuntu_manager.py
tests/: conftest.py
tests/core/: test_composite_notifier.py  test_config_loader.py  test_factory.py  test_module_loader.py  test_notifiers.py  test_plugins.py  test_workflow_configuration.py  test_workflow_context_sharing.py  test_workflow_error_handling.py  test_workflow_full_run.py  test_workflow_initialization.py  test_workflow_integration.py  test_workflow_plugin_execution.py  test_workflow_result_processing.py  test_workflow_system_update.py
tests/dummies/notifier/: dummy_notifier.py  raising_notifier.py  recording_notifier.py
tests/dummies/plugins/: __init__.py  plugin_a.py  plugin_b.py  plugin_failing.py
tests/email/: test_email_notifier.py
tests/gitlab/: conftest.py  test_gitlab_backup.py  test_gitlab_config.py  test_gitlab_update.py  test_gitlab_utils.py
tests/rclone/: test_rclone.py
tests/support/: component_spec.py  factories.py  fake_pkg_manager.py
tests/systems/: test_apt_manager.py  test_debian_manager.py  test_ubuntu_manager.py
tests/systems/contracts/: test_system_manager.py
