[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsflow"
version = "1.0.0"
authors = [
  { name="Sven Kleinhans", email="sven.kleinhans@gmx.de" },
]
description = "OpsFlow is a modular automation framework that orchestrates system tasks, integrates plugins, and sends notifications across multiple channels, making it easy to build flexible operational workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

dependencies = [
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
]

keywords = [
    "automation",
    "workflow",
    "ops",
    "operations",
    "task scheduler",
    "plugin system",
    "notifications",
    "modular",
    "orchestration",
    "system administration"
]

[project.optional-dependencies]
rclone = ["rclone-adapter>=0.2.0"]

[project.urls]
PyPI = "https://pypi.org/project/opsflow/"
Repository = "https://github.com/SvenKleinhans/OpsFlow"
Documentation = "https://github.com/SvenKleinhans/OpsFlow#readme"

[tool.setuptools.packages.find]
where = ["src"]
